--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,8 @@ infrastructure:
       request:
         delay: PT3H
 
-
-
+application:
+  security:
+    jwt:
+      secret-key: secret_key
+      expiration: 259200000
